  - Added "The Great Chip Empire" to Taiwan, giving them advantages in microchip production.
  - Added "Taiwan Semiconductor Manufacturing Company Ltd" as an MIO, giving Taiwan bonuses to their chip production and research for microchip aspects
  - Added a resource storage system for stockpiling resources with the "Strategic Resource Reserves"
  - Added the "2014 Aswan Tribal Conflict" to Egypt

 Database:
  - Land drone technologies now properly give the Ranger Light Recce company recon bonuses like all other recon units
  - Added 160 Scud GLCMs to Ukraine
  - China now starts with the "Microprocessor" tech
  - Adjusted productivity for nations to be more accurate to the development of regions and GDP as a percentage of their national GDP

 Factions:
  - Added a new faction goal "Establish an Airborne Corps"
  - CSTO should now accurately be blocked to just the joining of Post-Soviet States
  - Fixed the faction goal "Establish a Marine Corps" requiring a unit type that simply does not exist
  - Fixed the faction goal "Crush Democracy" being available to everyone including democracies
  - CSTO faction goal "Secure Central Asia" can now be completed when they are subjects themselves

 Graphics:
  - Fixed a handful of missing texticons for various unit definitions such as Stealth Corvettes, Stealth Destroyers, Stealth Frigates and more unit types
  - Fixed the missing models for the Repair Ships and Support Ships
  - Fixed a missing text icon for the CV MR Fighter, CV Light Strike Fighter when looking at unit types
  - Added new diplomatic request icons for "Propose Subsidies to Subject", "Propose/Request Energy Load Sharing", "Negotiate Operative Release", "Enforce Peace"
  - Integrated 81_evan's Iraqi flag submod to improve the flag selection for Iraq
  - Fixed the missing icon for the "Chinese Electric Car" ideas
  - Fixed a broken text icon for the La Resistance Espionage system not showing the mission icons