@@ -409,6 +409,20 @@ opinion_modifiers = {
 
 	forced_a_ceasefire_during_our_conflict = {
 		value = -100
+		months = 9
+	}
+
+	embassy_closed = {
+		value = -100
+	}
+
+	embassy_recently_closed = {
+		value = -25
+		months = 6
+	}
+
+	embassy_recently_reopened = {
+		value = 15
 		months = 6
 	}
 }
