@@ -84,3 +84,11 @@ has_war_with_or_allies_have_war_with_ROOT = {
 		}
 	}
 }
+
+embassy_with_root_closed = {
+	custom_override_tooltip = {
+		tooltip = embassy_with_root_closed_tt
+		has_country_flag = closed_embassy_@ROOT
+	}
+}
+
