@@ -389,6 +389,9 @@
  negotiate_operative_release: "Negotiated Operative Release"
  rejected_negotiate_operative_release: "Rejected Operative Release"
  forced_a_ceasefire_during_our_conflict: "Forced a Ceasefire During Our Conflict"
+ embassy_closed: "Embassy Closed"
+ embassy_recently_closed: "Embassy Recently Closed"
+ embassy_recently_reopened: "Embassy Recently Reopened"
 
  #Russian Opinions
  SOV_introduced_sanctions_dialogue: "Opened Sanctions Dialogue"
