@@ -32,7 +32,8 @@
  war_condition: "War"
  wargoal_condition: "Wargoals"
  condition_high_interest_rate: "Reluctance from Interest Rate"
-
+ base_close_embassy: "Base Reluctance Against §YClose Embassy§!"
+ base_reopen_embassy: "Base Reluctance Against §YReopen Embassy§!"
 
  PROPOSE_IMPROVED_TRADE_AGREEMENT_TITLE: "Propose §YTrade Agreement§!"
  PROPOSE_IMPROVED_TRADE_AGREEMENT_ACTION_DESC: "Proposing a §YTrade Agreement§! with this nation should be a mutually beneficial agreement. Bringing greater prosperity to both our nation and theirs. If the nation is looking to invest, having a §YTrade Agreement§! also increases your chance of getting investments.\n\nThe following are factors to how the AI will react to the agreement:\nSame Government, Opinion, Influence, Faction, EU Membership, NATO Membership."
@@ -336,3 +337,16 @@
  CPD_accepting_peace_deal: "Peace Deal Point Cost"
  CPD_selected_states_are_too_far_from_demander: "Selected States Are Too Far From Our Territory!"
  CPD_difficulty_setting: "Game Difficulty Setting"
+
+ #
+ CLOSE_EMBASSY_ACTION_TITLE: "Close Embassy"
+ CLOSE_EMBASSY_ACTION_ACTION_DESC: "WIP"
+ DIPLO_ACTION_CLOSE_EMBASSY_ACTION_DESC: "We can choose to close an embassy "
+
+ REOPEN_EMBASSY_ACTION_TITLE: "Reopen Embassy"
+ REOPEN_EMBASSY_ACTION_ACTION_DESC: "WIP"
+ DIPLO_ACTION_REOPEN_EMBASSY_ACTION_DESC: ""
+ DIPLO_ACTION_REOPEN_EMBASSY_ACCEPT_TITLE: "Embassy Reopened"
+ DIPLO_ACTION_REOPEN_EMBASSY_ACCEPT_DESC: "WIP"
+ DIPLO_ACTION_REOPEN_EMBASSY_REJECT_TITLE: "Embassy Reopening Rejected"
+ DIPLO_ACTION_REOPEN_EMBASSY_REJECT_DESC: "WIP"
