@@ -368,6 +368,9 @@
  has_state_in_range_of_one_of_our_owned_states_TT: "§Y[THIS.GetNameWithFlag]§! owns any state within 1000 of any of our owned states.\n"
  has_war_with_or_allies_have_war_with_ROOT_TT: "§Y[THIS.GetNameWithFlag]§! is at war with §Y[ROOT.GetNameWithFlag]§! or a §Y[ROOT.GetFlag][ROOT.GetAdjective]§! allied nation.\n"
  has_war_with_or_allies_have_war_with_ROOT_TT_NOT: "Not:$has_war_with_or_allies_have_war_with_ROOT_TT$"
+
+ embassy_with_root_closed_tt: "§Y[THIS.GetNameWithFlag]§! has closed their embassies with §Y[ROOT.GetNameWithFlag]§!"
+ embassy_with_root_closed_tt_NOT: "§Y[THIS.GetNameWithFlag]§! has not closed their embassies with §Y[ROOT.GetNameWithFlag]§!"
  # Tax Rate Changes
  disables_personal_tax_rate_change: "§RDisables§! §YPopulation Tax Rate§! changes\n"
  enables_personal_tax_rate_change: "§GEnables§! §YPopulation Tax Rate§! changes\n"
