@@ -378,6 +378,7 @@ v2.0.0
   - Added "The Great Chip Empire" to Taiwan, giving them advantages in microchip production.
   - Added "Taiwan Semiconductor Manufacturing Company Ltd" as an MIO, giving Taiwan bonuses to their chip production and research for microchip aspects
   - Added a resource storage system for stockpiling resources with the "Strategic Resource Reserves"
+  - Added a "Close Embassy" and "Reopen Embassy" diplomatic action
   - Added the "2014 Aswan Tribal Conflict" to Egypt
 
  Database:
